[package]
name = "brainfuc"
version = "0.1.0"
authors = ["Michiel De Muynck <michieldemuynck@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "5.1.2"
num = "0.4.0"
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = "s"
